fix home title alignment

--- a/src/scss/_obj-site-header.scss
+++ b/src/scss/_obj-site-header.scss
@@ -11,7 +11,7 @@ header {
     text-decoration: none;
 }
 
-.home-title__span {
+.header-title__span {
     display: block;
 
     &:last-child {
